# lz4a

./: .clang-format  .gitignore  Makefile  README.md  lz4d.cpp  test.sh
lz4/: CMakeLists.txt
lz4/inc/: lz4.h  lz4file.h  lz4frame.h  lz4hc.h  xxhash.h
lz4/src/: lz4.c  lz4file.c  lz4frame.c  lz4hc.c  xxhash.c
